--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Praticando com o Git e Github</h1>
     <h2>O que é o GIT?</h2>
     <!-- Adicione um parágrafo explicando o que é o Git, nas suas palavras -->
+    <p>Git é um repositório local onde nossos códigos são guardados em nosso computador.</p>
    
     <h2>O que é o Github</h2>
-    <!-- Adicione um outro parágrafo explicando o que é o Github -->
+    <p>Github é um repositório remôto e uma rede social de programadores, onde eles postam seus repositórios podendo ou não deixa-los públicos para a visualização de outros programadores</p>
+    
 </body>
 </html>
